trying to fix z-index in flipbook5

--- a/Launchpad2/launchpad2-style1/css/magazine.css
+++ b/Launchpad2/launchpad2-style1/css/magazine.css
@@ -28,9 +28,6 @@ body{
 .magazine-viewport .zoomer .region{
 	display:none;
 }
-.magazine.zoom-in {
-	z-index: 3000;
-}
 .magazine-viewport .zoom-in .region{
 	display:none;
 }
