--- a/Launchpad2/launchpad2-style1/sass/styles.scss
+++ b/Launchpad2/launchpad2-style1/sass/styles.scss
@@ -1379,7 +1379,7 @@
       margin-top: -30px;
       margin-left: -30px;
       background: $base-color-blue;
-      z-index: 10;
+      z-index: 100;
       font-size: 0px;
       padding: 20px 0;
       -moz-transition: ease-in-out all 0.3s; 
@@ -1441,7 +1441,7 @@
   }
   .columns.sidebar.flipbook {
     box-shadow: -2px 2px 2px rgba(0,0,0,0.25);
-    z-index: 10;
+    z-index: 100;
   }
 
 .sidebar.related-catalogs {
